syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Escuelas";

import "Escuelas/Models.proto";

service EscuelasApi {
  rpc GetByIds(GetEscuelasByIdsRequest) returns (GetEscuelasByIdsResult);
}
